# Salo-Salo

./: .gitignore  README.md  g2p.ipynb  pyproject.toml
data/: tgl_dev.tsv  tgl_test.tsv  tgl_train.tsv
data/input/: bikolano_train.tsv  cebuano_train.tsv  hiligaynon_train.tsv  ilocano_train.tsv  kapampangan_train.tsv  pangasinan_train.tsv  spanish_train.tsv  tagalog_dev.tsv  tagalog_test.tsv  tagalog_train.tsv  waray_train.tsv
data/splits/ph_spanish/: train.lang  train.tgt
data/splits/tgl_dev/: dev.src  dev.tgt
data/splits/tgl_test/: test.lang  test.src  test.tgt
models/: vocab.json
notebooks/: data.ipynb  g2p.ipynb  language_abl.ipynb  languages.ipynb
prepared/: dev.lang  dev.src  dev.tgt  train.lang  train.src  train.tgt
src/: dataset.py  decode.py  evaluation.py  lang_distance.py  prep_data.py  script_distance.py  temperature.py  train.py  transformer.py  uriel_distance.py  vocab.py
wikipron/: castillian_spanish_filtered.tsv  english.tsv  spanish.tsv  tagalog.tsv  tagalog_cleaned.csv  tagalog_cleaned.tsv  us_english_filtered.tsv
wikipron/austronesian/: acehnese.tsv  balinese.tsv  iban.tsv  indonesian.tsv  makasar.tsv  malay.tsv  west_makian.tsv
wikipron/filipino/: bikolano.tsv  cebuano.tsv  hiligaynon.tsv  ilocano.tsv  kapampangan.tsv  pangasinan.tsv  waray.tsv
