[project]
name = "Ensamble"
version = "0.1.0"
requires-python = ">=3.11, < 3.12"

dependencies = [
    "torch",
    "transformers==4.41.0",
    "scikit-learn",
    "lang2vec",
    "setuptools<81",
    "langcodes"
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true